[package]
authors = ["Cryotheum#4096"]
edition = "2021"
name = "gmod-goqui"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "gmsv_goqui_win64"

[dependencies]
audrey = "0.3"
byteorder = "1.4.3"
coqui-stt = "1.0"
dasp_interpolate = {version = "0.11", features = ["linear"]}
dasp_signal = "0.11"
gmod = {version = "16.0", features = ["gmcl"]}
opus = "0.3"
threadpool = "1.8"

[profile.dev.package."*"]
opt-level = 3